after adding  new delete querry
